--- a/mainweb/ufw.html
+++ b/mainweb/ufw.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Official UGF Webpage</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!-- Background Video -->
+    <div class="background-video">
+        <video autoplay muted loop id="blackhole-video">
+            <source src="https://motionbgs.com/media/3261/black-hole-in-nebula.960x540.mp4" type="video/mp4">
+            Your browser does not support HTML5 video.
+        </video>
+    </div>
+
+    <!-- Website Content -->
+    <div class="content">
+        <!-- Title Section -->
+        <header class="title-section">
+            <h1>Official UGF Webpage</h1>
+        </header>
+
+        <!-- Blog Section -->
+        <section class="blog-posts">
+            <article class="blog-post">
+                <h2>Blog Post Title</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis auctor, felis non scelerisque vulputate, erat velit blandit ligula...</p>
+                <a href="#" class="read-more">Read More</a>
+            </article>
+
+            <article class="blog-post">
+                <h2>Another Blog Post</h2>
+                <p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Praesent sapien massa, convallis a pellentesque nec...</p>
+                <a href="#" class="read-more">Read More</a>
+            </article>
+            <!-- Add more blog posts as needed -->
+        </section>
+
+        <!-- Footer -->
+        <footer class="footer">
+            <p>&copy; 2024 UGF. All rights reserved.</p>
+        </footer>
+    </div>
+</body>
+</html>
 
