--- a/mainweb/ufw.html
+++ b/mainweb/ufw.html
@@ -7,13 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Background Video -->
-    <div class="background-video">
-        <video autoplay muted loop id="blackhole-video">
-            <source src="https://motionbgs.com/media/3261/black-hole-in-nebula.960x540.mp4" type="video/mp4">
-            Your browser does not support HTML5 video.
-        </video>
-    </div>
+    <!-- Background Image -->
+    <div class="background-image"></div>
 
     <!-- Website Content -->
     <div class="content">
@@ -25,17 +20,16 @@
         <!-- Blog Section -->
         <section class="blog-posts">
             <article class="blog-post">
-                <h2>Blog Post Title</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis auctor, felis non scelerisque vulputate, erat velit blandit ligula...</p>
+                <h2>Mission Update: New Operations</h2>
+                <p>Recent developments have seen the United Galactic Federation advancing its frontier on multiple fronts. High Commander Septu leads the charge...</p>
                 <a href="#" class="read-more">Read More</a>
             </article>
 
             <article class="blog-post">
-                <h2>Another Blog Post</h2>
-                <p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Praesent sapien massa, convallis a pellentesque nec...</p>
+                <h2>Recruitment Drive: Join the UGF</h2>
+                <p>The UGF is looking for new recruits to bolster its ranks. Do you have what it takes to serve the Federation in this time of need?</p>
                 <a href="#" class="read-more">Read More</a>
             </article>
-            <!-- Add more blog posts as needed -->
         </section>
 
         <!-- Footer -->
@@ -45,4 +39,3 @@
     </div>
 </body>
 </html>
-
