--- a/mainweb/ufw.html
+++ b/mainweb/ufw.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Background Image -->
-    <div class="background-image"></div>
+
+    <!-- Navigation -->
+    <nav class="navbar">
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="gallery.html" class="nav-link">Art Gallery</a>
+        <a href="discord.html" class="nav-link">Join Discord</a>
+    </nav>
 
     <!-- Website Content -->
     <div class="content">
@@ -37,5 +42,6 @@
             <p>&copy; 2024 UGF. All rights reserved.</p>
         </footer>
     </div>
+
 </body>
 </html>
