--- a/mainweb/ufw.html
+++ b/mainweb/ufw.html
@@ -43,5 +43,7 @@
         </footer>
     </div>
 
+    <!-- JavaScript for smooth transitions -->
+    <script src="script.js"></script>
 </body>
 </html>
