--- a/mainweb/gallery.html
+++ b/mainweb/gallery.html
@@ -10,7 +10,7 @@
 
     <!-- Navigation -->
     <nav class="navbar">
-        <a href="index.html" class="nav-link">Home</a>
+        <a href="ufw.html" class="nav-link">Home</a>
         <a href="gallery.html" class="nav-link active">Art Gallery</a>
         <a href="discord.html" class="nav-link">Join Discord</a>
     </nav>
@@ -28,9 +28,11 @@
                 <img src="https://via.placeholder.com/1920" alt="Placeholder Image">
                 <p>Placeholder Name 2</p>
             </div>
-            <!-- Repeat for 8x8 grid -->
+            <!-- Repeat for the remaining items -->
         </div>
     </div>
 
+    <!-- JavaScript for smooth transitions -->
+    <script src="script.js"></script>
 </body>
 </html>
