--- a/mainweb/discord.html
+++ b/mainweb/discord.html
@@ -10,16 +10,18 @@
 
     <!-- Navigation -->
     <nav class="navbar">
-        <a href="index.html" class="nav-link">Home</a>
+        <a href="ufw.html" class="nav-link">Home</a>
         <a href="gallery.html" class="nav-link">Art Gallery</a>
         <a href="discord.html" class="nav-link active">Join Discord</a>
     </nav>
 
-    <!-- Discord Link -->
+    <!-- Discord Link Content -->
     <div class="discord-content">
         <h1>Join the UGF Discord Server</h1>
         <a href="https://discord.com/invite/ugfontop" class="discord-link">Click Here to Join!</a>
     </div>
 
+    <!-- JavaScript for smooth transitions -->
+    <script src="script.js"></script>
 </body>
 </html>
