--- a/mainweb/ufw.html
+++ b/mainweb/ufw.html
@@ -10,7 +10,7 @@
 
     <!-- Navigation -->
     <nav class="navbar">
-        <a href="ufw.html" class="nav-link">Home</a>
+        <a href="ufw.html" class="nav-link active">Home</a>
         <a href="gallery.html" class="nav-link">Art Gallery</a>
         <a href="discord.html" class="nav-link">Join Discord</a>
     </nav>
