--- a/mainweb/gallery.html
+++ b/mainweb/gallery.html
@@ -28,7 +28,7 @@
                 <img src="https://via.placeholder.com/1920" alt="Placeholder Image">
                 <p>Placeholder Name 2</p>
             </div>
-            <!-- Repeat for the remaining items -->
+            <!-- Repeat for other placeholder items -->
         </div>
     </div>
 
