--- a/mainweb/ufw.html
+++ b/mainweb/ufw.html
@@ -7,16 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="page">
+        <!-- Navigation -->
+        <nav class="navbar">
+            <a href="ufw.html" class="nav-link active">Home</a>
+            <a href="gallery.html" class="nav-link">Art Gallery</a>
+            <a href="discord.html" class="nav-link">Join Discord</a>
+        </nav>
 
-    <!-- Navigation -->
-    <nav class="navbar">
-        <a href="ufw.html" class="nav-link active">Home</a>
-        <a href="gallery.html" class="nav-link">Art Gallery</a>
-        <a href="discord.html" class="nav-link">Join Discord</a>
-    </nav>
-
-    <!-- Website Content -->
-    <div class="content">
         <!-- Title Section -->
         <header class="title-section">
             <h1>Official UGF Webpage</h1>
@@ -26,14 +24,12 @@
         <section class="blog-posts">
             <article class="blog-post">
                 <h2>Mission Update: New Operations</h2>
-                <p>Recent developments have seen the United Galactic Federation advancing its frontier on multiple fronts. High Commander Septu leads the charge...</p>
-                <a href="#" class="read-more">Read More</a>
+                <p>Recent developments have seen the United Galactic Federation advancing its frontier on multiple fronts...</p>
             </article>
 
             <article class="blog-post">
                 <h2>Recruitment Drive: Join the UGF</h2>
-                <p>The UGF is looking for new recruits to bolster its ranks. Do you have what it takes to serve the Federation in this time of need?</p>
-                <a href="#" class="read-more">Read More</a>
+                <p>The UGF is looking for new recruits to bolster its ranks. Do you have what it takes to serve the Federation?</p>
             </article>
         </section>
 
@@ -43,7 +39,6 @@
         </footer>
     </div>
 
-    <!-- JavaScript for smooth transitions -->
     <script src="script.js"></script>
 </body>
 </html>
