--- a/mainweb/ufw.html
+++ b/mainweb/ufw.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Official UGF Webpage</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <div class="page">
@@ -24,7 +25,7 @@
         <section class="blog-posts">
             <article class="blog-post">
                 <h2>Mission Update: New Operations</h2>
-                <p>Recent developments have seen the United Galactic Federation advancing its frontier on multiple fronts...</p>
+                <p>Recent developments have seen the United Gamer Federation advancing its frontier on multiple fronts...</p>
             </article>
 
             <article class="blog-post">
@@ -38,7 +39,5 @@
             <p>&copy; 2024 UGF. All rights reserved.</p>
         </footer>
     </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
