--- a/mainweb/ufw.html
+++ b/mainweb/ufw.html
@@ -3,41 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Official UGF Webpage</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="script.js"></script>
+    <title>UGF Official Home</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/home-styles.css">
 </head>
 <body>
-    <div class="page">
-        <!-- Navigation -->
-        <nav class="navbar">
-            <a href="ufw.html" class="nav-link active">Home</a>
+
+    <header>
+        <h1>UGF Official Webpage</h1>
+        <nav>
+            <a href="ufw.html" class="nav-link">Home</a>
             <a href="gallery.html" class="nav-link">Art Gallery</a>
-            <a href="discord.html" class="nav-link">Join Discord</a>
+            <a href="discord.html" class="nav-link">Discord</a>
         </nav>
+    </header>
 
-        <!-- Title Section -->
-        <header class="title-section">
-            <h1>Official UGF Webpage</h1>
-        </header>
+    <section class="content">
+        <h2>Welcome to UGF Official Webpage</h2>
+        <p>Explore our art gallery and join us on Discord!</p>
+    </section>
 
-        <!-- Blog Section -->
-        <section class="blog-posts">
-            <article class="blog-post">
-                <h2>Mission Update: New Operations</h2>
-                <p>Recent developments have seen the United Gamer Federation advancing its frontier on multiple fronts...</p>
-            </article>
+    <footer>
+        <p>&copy; 2024 UGF. All Rights Reserved.</p>
+    </footer>
 
-            <article class="blog-post">
-                <h2>Recruitment Drive: Join the UGF</h2>
-                <p>The UGF is looking for new recruits to bolster its ranks. Do you have what it takes to serve the Federation?</p>
-            </article>
-        </section>
-
-        <!-- Footer -->
-        <footer class="footer">
-            <p>&copy; 2024 UGF. All rights reserved.</p>
-        </footer>
-    </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
