--- a/mainweb/gallery.html
+++ b/mainweb/gallery.html
@@ -4,46 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UGF Art Gallery</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/gallery-styles.css">
 </head>
 <body>
-    <div class="page">
-        <!-- Navigation -->
-        <nav class="navbar">
+
+    <header>
+        <h1>Art Gallery</h1>
+        <nav>
             <a href="ufw.html" class="nav-link">Home</a>
-            <a href="gallery.html" class="nav-link active">Art Gallery</a>
-            <a href="discord.html" class="nav-link">Join Discord</a>
+            <a href="gallery.html" class="nav-link">Art Gallery</a>
+            <a href="discord.html" class="nav-link">Discord</a>
         </nav>
+    </header>
 
-        <!-- Art Gallery Section -->
-        <section class="gallery-section">
-            <div class="gallery-container">
-                <!-- Left and Right Fade Effect -->
-                <div class="fade fade-left"></div>
-                <div class="gallery">
-                    <div class="gallery-item">
-                        <img src="https://via.placeholder.com/1920x1920" alt="Logo 1">
-                        <p>Logo 1</p>
-                    </div>
-                    <div class="gallery-item">
-                        <img src="https://via.placeholder.com/1920x1920" alt="Logo 2">
-                        <p>Logo 2</p>
-                    </div>
-                    <div class="gallery-item">
-                        <img src="https://via.placeholder.com/1920x1920" alt="Logo 3">
-                        <p>Logo 3</p>
-                    </div>
-                    <!-- Add more gallery items as needed -->
-                </div>
-                <div class="fade fade-right"></div>
+    <section class="gallery-container">
+        <div class="gallery-grid">
+            <!-- Placeholder logos -->
+            <div class="gallery-item">
+                <img src="https://via.placeholder.com/192" alt="Logo 1">
+                <p>Logo 1</p>
             </div>
-        </section>
+            <div class="gallery-item">
+                <img src="https://via.placeholder.com/192" alt="Logo 2">
+                <p>Logo 2</p>
+            </div>
+            <!-- Add more logos here -->
+        </div>
+    </section>
 
-        <!-- Footer -->
-        <footer class="footer">
-            <p>&copy; 2024 UGF. All rights reserved.</p>
-        </footer>
-    </div>
+    <div class="fade-left"></div>
+    <div class="fade-right"></div>
+
+    <footer>
+        <p>&copy; 2024 UGF. All Rights Reserved.</p>
+    </footer>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
