--- a/mainweb/ufw.html
+++ b/mainweb/ufw.html
@@ -5,27 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UGF Official Home</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/home-styles.css">
 </head>
 <body>
-
     <header>
-        <h1>UGF Official Webpage</h1>
+        <h1 class="glitch">Official UGF Webpage</h1>
         <nav>
             <a href="ufw.html" class="nav-link">Home</a>
-            <a href="gallery.html" class="nav-link">Art Gallery</a>
-            <a href="discord.html" class="nav-link">Discord</a>
+            <a href="gallery.html" class="nav-link">Gallery</a>
+            <a href="https://discord.com/invite/ugfontop" class="nav-link">Discord</a>
         </nav>
     </header>
-
-    <section class="content">
-        <h2>Welcome to UGF Official Webpage</h2>
-        <p>Explore our art gallery and join us on Discord!</p>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 UGF. All Rights Reserved.</p>
-    </footer>
+    
+    <div class="content">
+        <p>Welcome to the United Galactic Federation's official webpage.</p>
+    </div>
 
     <script src="js/script.js"></script>
 </body>
