--- a/mainweb/gallery.html
+++ b/mainweb/gallery.html
@@ -4,42 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UGF Art Gallery</title>
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/gallery-styles.css">
 </head>
 <body>
-
     <header>
-        <h1>Art Gallery</h1>
-        <nav>
-            <a href="ufw.html" class="nav-link">Home</a>
-            <a href="gallery.html" class="nav-link">Art Gallery</a>
-            <a href="discord.html" class="nav-link">Discord</a>
-        </nav>
+        <h1 class="glitch">UGF Art Gallery</h1>
     </header>
-
-    <section class="gallery-container">
+    
+    <div class="gallery-container">
         <div class="gallery-grid">
             <!-- Placeholder logos -->
             <div class="gallery-item">
-                <img src="https://via.placeholder.com/192" alt="Logo 1">
+                <img src="placeholder1.jpg" alt="Logo 1">
                 <p>Logo 1</p>
             </div>
             <div class="gallery-item">
-                <img src="https://via.placeholder.com/192" alt="Logo 2">
+                <img src="placeholder2.jpg" alt="Logo 2">
                 <p>Logo 2</p>
             </div>
-            <!-- Add more logos here -->
+            <!-- Add more gallery items -->
         </div>
-    </section>
+    </div>
 
     <div class="fade-left"></div>
     <div class="fade-right"></div>
 
-    <footer>
-        <p>&copy; 2024 UGF. All Rights Reserved.</p>
-    </footer>
-
-    <script src="js/script.js"></script>
+    <script src="js/gallery-script.js"></script>
 </body>
 </html>
