--- a/mainweb/gallery.html
+++ b/mainweb/gallery.html
@@ -15,11 +15,11 @@
         <div class="gallery-grid">
             <!-- Placeholder logos -->
             <div class="gallery-item">
-                <img src="placeholder1.jpg" alt="Logo 1">
+                <img src="images/placeholder1.jpg" alt="Logo 1">
                 <p>Logo 1</p>
             </div>
             <div class="gallery-item">
-                <img src="placeholder2.jpg" alt="Logo 2">
+                <img src="images/placeholder2.jpg" alt="Logo 2">
                 <p>Logo 2</p>
             </div>
             <!-- Add more gallery items -->
