--- a/mainweb/gallery.html
+++ b/mainweb/gallery.html
@@ -22,7 +22,7 @@
                 <img src="images/placeholder2.jpg" alt="Logo 2">
                 <p>Logo 2</p>
             </div>
-            <!-- Add more gallery items -->
+            <!-- Add more gallery items as needed -->
         </div>
     </div>
 
