--- a/mainweb/gallery.html
+++ b/mainweb/gallery.html
@@ -9,6 +9,10 @@
 <body>
     <header>
         <h1 class="glitch">UGF Art Gallery</h1>
+        <nav class="gallery-nav">
+            <a href="ufw.html" class="nav-button">Home</a>
+            <a href="https://discord.com/invite/ugfontop" class="nav-button">Discord</a>
+        </nav>
     </header>
     
     <div class="gallery-container">
