--- a/mainweb/ufw.html
+++ b/mainweb/ufw.html
@@ -3,36 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UGF Art Gallery</title>
-    <link rel="stylesheet" href="css/gallery-styles.css">
+    <title>Official UGF Webpage</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
-        <h1 class="glitch">UGF Art Gallery</h1>
-        <nav class="gallery-nav">
-            <a href="ufw.html" class="nav-button">Home</a>
-            <a href="https://discord.com/invite/ugfontop" class="nav-button">Discord</a>
+        <h1 class="glitch">Official UGF Webpage</h1>
+        <nav class="nav">
+            <a href="ufw.html" class="nav-link">Home</a>
+            <a href="gallery.html" class="nav-link">Gallery</a>
+            <a href="https://discord.com/invite/ugfontop" class="nav-link">Discord</a>
         </nav>
     </header>
     
-    <div class="gallery-container">
-        <div class="gallery-grid">
-            <!-- Placeholder logos -->
-            <div class="gallery-item">
-                <img src="images/placeholder1.jpg" alt="Logo 1">
-                <p>Logo 1</p>
-            </div>
-            <div class="gallery-item">
-                <img src="images/placeholder2.jpg" alt="Logo 2">
-                <p>Logo 2</p>
-            </div>
-            <!-- Add more gallery items as needed -->
-        </div>
-    </div>
+    <main class="content">
+        <section class="interactive-section">
+            <h2>Welcome to the Future</h2>
+            <p>Explore the universe of UGF with advanced technology and immersive experiences.</p>
+        </section>
+    </main>
 
-    <div class="fade-left"></div>
-    <div class="fade-right"></div>
-
-    <script src="js/gallery-script.js"></script>
+    <script src="js/main-script.js"></script>
 </body>
 </html>
