--- a/mainweb/gallery.html
+++ b/mainweb/gallery.html
@@ -17,7 +17,7 @@
     
     <div class="gallery-container">
         <div class="gallery-grid">
-            <!-- Placeholder logos -->
+            <!-- Added more placeholder logos -->
             <div class="gallery-item">
                 <img src="images/placeholder1.jpg" alt="Logo 1">
                 <p>Logo 1</p>
@@ -26,7 +26,46 @@
                 <img src="images/placeholder2.jpg" alt="Logo 2">
                 <p>Logo 2</p>
             </div>
-            <!-- Add more gallery items as needed -->
+            <div class="gallery-item">
+                <img src="images/placeholder3.jpg" alt="Logo 3">
+                <p>Logo 3</p>
+            </div>
+            <div class="gallery-item">
+                <img src="images/placeholder4.jpg" alt="Logo 4">
+                <p>Logo 4</p>
+            </div>
+            <div class="gallery-item">
+                <img src="images/placeholder5.jpg" alt="Logo 5">
+                <p>Logo 5</p>
+            </div>
+            <div class="gallery-item">
+                <img src="images/placeholder6.jpg" alt="Logo 6">
+                <p>Logo 6</p>
+            </div>
+            <div class="gallery-item">
+                <img src="images/placeholder7.jpg" alt="Logo 7">
+                <p>Logo 7</p>
+            </div>
+            <div class="gallery-item">
+                <img src="images/placeholder8.jpg" alt="Logo 8">
+                <p>Logo 8</p>
+            </div>
+            <div class="gallery-item">
+                <img src="images/placeholder9.jpg" alt="Logo 9">
+                <p>Logo 9</p>
+            </div>
+            <div class="gallery-item">
+                <img src="images/placeholder10.jpg" alt="Logo 10">
+                <p>Logo 10</p>
+            </div>
+            <div class="gallery-item">
+                <img src="images/placeholder11.jpg" alt="Logo 11">
+                <p>Logo 11</p>
+            </div>
+            <div class="gallery-item">
+                <img src="images/placeholder12.jpg" alt="Logo 12">
+                <p>Logo 12</p>
+            </div>
         </div>
     </div>
 
