--- a/mainweb/gallery.html
+++ b/mainweb/gallery.html
@@ -15,9 +15,9 @@
         </nav>
     </header>
     
-    <div class="gallery-container">
+    <main class="gallery-container">
         <div class="gallery-grid">
-            <!-- Added more placeholder logos -->
+            <!-- Added more placeholder logos with names -->
             <div class="gallery-item">
                 <img src="images/placeholder1.jpg" alt="Logo 1">
                 <p>Logo 1</p>
@@ -67,7 +67,7 @@
                 <p>Logo 12</p>
             </div>
         </div>
-    </div>
+    </main>
 
     <div class="fade-left"></div>
     <div class="fade-right"></div>
