--- a/mainweb/federal.html
+++ b/mainweb/federal.html
@@ -11,6 +11,9 @@
             background-image: url('https://static.vecteezy.com/system/resources/previews/005/178/921/original/black-and-red-abstract-background-color-future-digital-sport-background-free-vector.jpg');
             background-size: cover;
             background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            width: 100vw;
             height: 100vh;
             font-family: Arial, sans-serif;
         }
@@ -43,6 +46,11 @@
         .audio-controls button:hover, .audio-controls input:hover {
             background-color: #ff6666;
         }
+
+        /* Hides the YouTube video player */
+        #videoPlayer {
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -50,46 +58,54 @@
     <!-- Audio Controls -->
     <div class="audio-controls">
         <button id="playPauseBtn">Pause</button>
-        <input id="volumeControl" type="range" min="0" max="1" step="0.1" value="1">
+        <input id="volumeControl" type="range" min="0" max="100" value="100">
     </div>
 
-    <audio id="backgroundMusic" loop autoplay>
-        <source src="https://www.youtube.com/watch?v=lwYWMHVwYrs" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
+    <!-- Embed YouTube Video -->
+    <div id="videoPlayer">
+        <iframe id="ytPlayer" width="0" height="0" src="https://www.youtube.com/embed/lwYWMHVwYrs?autoplay=1&loop=1&playlist=lwYWMHVwYrs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
 
     <script>
-        // Audio Element
-        const audio = document.getElementById('backgroundMusic');
+        // YouTube API integration for controlling the audio
+        let player;
 
-        // Play/Pause Button
-        const playPauseBtn = document.getElementById('playPauseBtn');
-        playPauseBtn.addEventListener('click', function() {
-            if (audio.paused) {
-                audio.play();
-                playPauseBtn.textContent = 'Pause';
-            } else {
-                audio.pause();
-                playPauseBtn.textContent = 'Play';
-            }
-        });
-
-        // Volume Control
-        const volumeControl = document.getElementById('volumeControl');
-        volumeControl.addEventListener('input', function() {
-            audio.volume = volumeControl.value;
-        });
-
-        // Hide YouTube player and ensure audio only
-        function hideYouTubePlayer() {
-            const youtubeIframe = document.querySelector('iframe');
-            if (youtubeIframe) {
-                youtubeIframe.style.display = 'none';
-            }
+        // Load YouTube Iframe API
+        function onYouTubeIframeAPIReady() {
+            player = new YT.Player('ytPlayer', {
+                events: {
+                    'onReady': onPlayerReady
+                }
+            });
         }
 
-        // Check periodically to hide YouTube player
-        setInterval(hideYouTubePlayer, 1000);
+        function onPlayerReady(event) {
+            event.target.playVideo(); // Auto-play when ready
+
+            // Play/Pause Button
+            const playPauseBtn = document.getElementById('playPauseBtn');
+            playPauseBtn.addEventListener('click', function() {
+                if (player.getPlayerState() === YT.PlayerState.PLAYING) {
+                    player.pauseVideo();
+                    playPauseBtn.textContent = 'Play';
+                } else {
+                    player.playVideo();
+                    playPauseBtn.textContent = 'Pause';
+                }
+            });
+
+            // Volume Control
+            const volumeControl = document.getElementById('volumeControl');
+            volumeControl.addEventListener('input', function() {
+                player.setVolume(volumeControl.value);
+            });
+        }
+
+        // Load the Iframe API script dynamically
+        var tag = document.createElement('script');
+        tag.src = "https://www.youtube.com/iframe_api";
+        var firstScriptTag = document.getElementsByTagName('script')[0];
+        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
     </script>
 </body>
 </html>
